--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
                 <img src='../images/background/white1.jpg' alt='Profile'>
                 <div class="cta__text-column">
                     <p class ="desc">Add, Edit and Customize your Profile with colorful pallets, collections and let everyone know who is the best plant collector out there!</p>
-                    <a href="profile.html">View Your Profile</a>
+                    <a id="viewProfile" href="profile.html">View Your Profile</a>
                 </div>
             </article>
 
