--- a/html/profile.html
+++ b/html/profile.html
@@ -73,9 +73,9 @@
                                 <img id="avatar" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" width="150">
                             </div>
                             <div id="circleData">
-                                <h2 id="userName">Popa Andrei</h2>
-                                <h3 id="userOccupation">Full Time Student</h3>
-                                <h3 id="userAddress">Iasi, Strada Bucium, nr.35</h3>
+                                <h2 id="userName"></h2>
+                                <h3 id="userOccupation"></h3>
+                                <h3 id="userAddress"></h3>
                                 <div class="button-div">
                                     <button class="format-btn" id="followButton">Follow</button>
                                     <button class="format-btn" id="editButton">Edit Info</button>
