You can add friends/The plant profile is implemented(responsive/up to date)/ You can see someone's profile from a collection of their's, other

--- a/html/blogPage.html
+++ b/html/blogPage.html
@@ -41,6 +41,8 @@
       </div>
     <main>
        
+      <div class="floating-message"></div>
+
         <div class="container">
           
         </div>
