--- a/html/collection.html
+++ b/html/collection.html
@@ -62,12 +62,15 @@
       </div>
 
         <button id="addPlantButton" class="floating-button" title="Add New Button">&#43;</button>
+        <div id="whiteback">
         <div id="cont">
             <div id="title">
               <p id="titleText"></p>
+            </div>
+              <div id="detailsBox">
               <p class="smallDetails" id="left"></p>
               <p class="smallDetails" id="right"></p>
-            </div>
+              </div>
             <div id="descripton">
                 <h3>Descripton</h3>
                 <div id="line"></div>
@@ -75,12 +78,14 @@
             </div>
             <div id="collectionButtons">
               <button class="format-btn" id="edit">Edit Collection</button>
+              <button class="format-btn" id="profile">See Profile</button>
               <button class="format-btn" id="delete">Delete Collection</button>
             </div>
             <div class="container" id="collectionContainer">
                 <p class="no-collections-message">No plants have been added yet.</p>
             </div>
         </div>
+      </div>
     </main>
     <footer>
         <img id = "github" class="socialMediaIcon" src="../images/social_media/github.png" alt="Logo Small">
