--- a/html/profile.html
+++ b/html/profile.html
@@ -41,6 +41,8 @@
       </div>
     <main>
 
+        <div class="floating-message"></div>
+
         <div id="modal" class="modal">
             <div class="modal-content">
               <span class="close">&times;</span>
@@ -118,12 +120,10 @@
                 <h2 class="collections-title">Following List</h2>
                 <div class="collections">
                     <div class="line"></div>
-                    <img class="friend" src="../images/background/friend.png" alt="Mountains" width="100" height="100">
-                    <img class="friend" src="../images/background/friend.png" alt="Mountains" width="100" height="100">
-                    <img class="friend" src="../images/background/friend.png" alt="Mountains" width="100" height="100">  
-                    <img class="friend" src="../images/background/friend.png" alt="Mountains" width="100" height="100">
-                    <img class="friend" src="../images/background/friend.png" alt="Mountains" width="100" height="100">
-                    <img class="friend" src="../images/background/friend.png" alt="Mountains" width="100" height="100">  
+                    <p id="no-followers-message"></p>
+                    <div id="friends">
+                        <!-- <img class="friend" src="../images/background/friend.png" alt="Mountains" width="100" height="100">  -->
+                    </div>
                 </div>
             </div>
         </div>
