Added CRUD functionality for plants/and overall navigation functionality, fixed data updating on collections, quality of life changes

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,9 @@
         <title>Home | HeMa</title>
         <link rel="stylesheet" href="../css/template.css">
         <link rel="stylesheet" href="../css/about.css">
+        <link rel="stylesheet" href="../css/flower.css">
+        <link rel="stylesheet" href="../css/indexFlowers.css">
+        <link rel="stylesheet" href="../css/dynamicFlowers.css">
         <link rel="icon" href="../images/website_Icon/plant.png" type="image/x-icon">
     </head>
     <body class="body-extension">
@@ -84,6 +87,44 @@
             </article>
 
         </div>
+
+        <div class="f-wrapper f-wrapper--1">
+            <div class="f">
+                <div class="flower__leaf flower__leaf--1"></div>
+                <div class="flower__leaf flower__leaf--2"></div>
+                <div class="flower__leaf flower__leaf--3"></div>
+                <div class="flower__leaf flower__leaf--4"></div>
+                <div class="flower__leaf flower__leaf--5"></div>
+                <div class="flower__leaf flower__leaf--6"></div>
+                <div class="flower__leaf flower__leaf--7"></div>
+            </div>
+        </div>
+
+        <div class="f-wrapper f-wrapper--2">
+            <div class="f">
+                <div class="flower__leaf flower__leaf--1"></div>
+                <div class="flower__leaf flower__leaf--2"></div>
+                <div class="flower__leaf flower__leaf--3"></div>
+                <div class="flower__leaf flower__leaf--4"></div>
+                <div class="flower__leaf flower__leaf--5"></div>
+                <div class="flower__leaf flower__leaf--6"></div>
+                <div class="flower__leaf flower__leaf--7"></div>
+            </div>
+        </div>
+
+        <div class="f-wrapper f-wrapper--3">
+            <div class="f">
+                <div class="flower__leaf flower__leaf--1"></div>
+                <div class="flower__leaf flower__leaf--2"></div>
+                <div class="flower__leaf flower__leaf--3"></div>
+                <div class="flower__leaf flower__leaf--4"></div>
+                <div class="flower__leaf flower__leaf--5"></div>
+                <div class="flower__leaf flower__leaf--6"></div>
+                <div class="flower__leaf flower__leaf--7"></div>
+            </div>
+        </div>
+
+
         </main>
 
         <footer>
@@ -95,5 +136,6 @@
         <script src="../scripts/footer.js"></script>
         <script src="../scripts/navBar.js"></script>
         <script src="../scripts/index.js"></script>
+        <script src="../scripts/randomColors.js"></script>
     </body>
 </html>
