--- a/html/landingPage.html
+++ b/html/landingPage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/template.css">
     <link rel="stylesheet" href="../css/flower.css">
     <link rel="stylesheet" href="../css/landingPage.css">
+    <link rel="stylesheet" href="../css/dynamicFlowers.css">
     <link rel="icon" href="../images/website_Icon/plant.png" type="image/x-icon">
 </head>
 
@@ -117,5 +118,6 @@
     <!-- Scripts -->
     <script src="../scripts/footer.js"></script>
     <script src="../scripts/landingPage.js"></script>
+    <script src="../scripts/randomColors.js"></script>
 </body>
 </html>
