--- a/html/profile.html
+++ b/html/profile.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="../css/template.css">
     <link rel="stylesheet" href="../css/hover-cards.css">
     <!-- <link rel="stylesheet" href="../css/profile.css"> -->
+    <link rel="stylesheet" href="../css/flower.css">
     <link rel="stylesheet" href="../css/collection-list.css">
+    <link rel="stylesheet" href="../css/dynamicFlowers.css">
     <link rel="icon" href="../images/website_Icon/plant.png" type="image/x-icon">
 </head>
 
@@ -127,6 +129,44 @@
                 </div>
             </div>
         </div>
+
+        <div class="f-wrapper f-wrapper--1">
+            <div class="f">
+                <div class="flower__leaf flower__leaf--1"></div>
+                <div class="flower__leaf flower__leaf--2"></div>
+                <div class="flower__leaf flower__leaf--3"></div>
+                <div class="flower__leaf flower__leaf--4"></div>
+                <div class="flower__leaf flower__leaf--5"></div>
+                <div class="flower__leaf flower__leaf--6"></div>
+                <div class="flower__leaf flower__leaf--7"></div>
+            </div>
+        </div>
+
+        <div class="f-wrapper f-wrapper--2">
+            <div class="f">
+                <div class="flower__leaf flower__leaf--1"></div>
+                <div class="flower__leaf flower__leaf--2"></div>
+                <div class="flower__leaf flower__leaf--3"></div>
+                <div class="flower__leaf flower__leaf--4"></div>
+                <div class="flower__leaf flower__leaf--5"></div>
+                <div class="flower__leaf flower__leaf--6"></div>
+                <div class="flower__leaf flower__leaf--7"></div>
+            </div>
+        </div>
+
+        <div class="f-wrapper f-wrapper--3">
+            <div class="f">
+                <div class="flower__leaf flower__leaf--1"></div>
+                <div class="flower__leaf flower__leaf--2"></div>
+                <div class="flower__leaf flower__leaf--3"></div>
+                <div class="flower__leaf flower__leaf--4"></div>
+                <div class="flower__leaf flower__leaf--5"></div>
+                <div class="flower__leaf flower__leaf--6"></div>
+                <div class="flower__leaf flower__leaf--7"></div>
+            </div>
+        </div>
+        
+
     </main>
 
   <footer>
@@ -138,5 +178,6 @@
     <script src="../scripts/footer.js"></script>
     <script src="../scripts/profile.js"></script>
     <script src="../scripts/navBar.js"></script>
+    <script src="../scripts/randomColors.js"></script>
 </body>
 </html>
