--- a/html/register.html
+++ b/html/register.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/flower.css">
     <link rel="stylesheet" href="../css/register.css">
     <link rel="stylesheet" href="../css/loginRegisterHeader.css">
+    <link rel="stylesheet" href="../css/dynamicFlowers.css">
     <link rel="icon" href="../images/website_Icon/plant.png" type="image/x-icon">
 </head>
 
@@ -104,5 +105,6 @@
     <!-- Scripts -->
     <script src="../scripts/footer.js"></script>
     <script src="../scripts/register.js"></script>
+    <script src="../scripts/randomColors.js"></script>
 </body>
 </html>
