Password resetting mechanism + other(check description)

--- a/html/PlantProfilePage.html
+++ b/html/PlantProfilePage.html
@@ -50,7 +50,7 @@
                 </div>
                 <div id="updateLine"></div>
                 <input type="text" name="hashtags" id="hashtags1" placeholder="Hashtags">
-                <input type="text" name="dateOfCollection" id="date-collection1" placeholder="Date Of Collection">
+                <input type="date" name="dateOfCollection" id="date-collection1" placeholder="Date Of Collection">
                 <input type="text" name="commonName" id="common-name1" placeholder="Common Name">
                 <input type="text" name="scientificName" id="scientific-name1" placeholder="Scientific Name">
                 <input type="text" name="family" id="family1" placeholder="Family">
