--- a/html/profile.html
+++ b/html/profile.html
@@ -102,10 +102,15 @@
                 </div>
             </div>
             <div class="card collections-card" id="collectionList">
+                <div class="minimize-button rotated" onclick="toggleRotationPlants(this)">
+                    <svg class="sg" width="100px" height="100px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7071 14.7071C12.3166 15.0976 11.6834 15.0976 11.2929 14.7071L6.29289 9.70711C5.90237 9.31658 5.90237 8.68342 6.29289 8.29289C6.68342 7.90237 7.31658 7.90237 7.70711 8.29289L12 12.5858L16.2929 8.29289C16.6834 7.90237 17.3166 7.90237 17.7071 8.29289C18.0976 8.68342 18.0976 9.31658 17.7071 9.70711L12.7071 14.7071Z" fill="#000000"/>
+                    </svg>
+                </div>
                 <h2 class="collections-title">Plant Collections</h2>
                 <button id="addPlantButton" class="floating-button" title="Add New Button">&#43;</button>
+                <div class="line"></div>
                 <div class="collections collectionsPlace" id="figurePlace">
-                    <div class="line"></div>
                     <p class="no-collections-message">No collections have been made yet.</p>
                     <!-- <figure>
                         <img src="../images/background/card2.jpg" alt="Mountains" width="250" height="300">
@@ -123,6 +128,11 @@
                 </div>
             </div>
             <div class="card collections-card">
+                <div class="minimize-button rotated" onclick="toggleRotationFriends(this)">
+                    <svg class="sg" width="100px" height="100px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7071 14.7071C12.3166 15.0976 11.6834 15.0976 11.2929 14.7071L6.29289 9.70711C5.90237 9.31658 5.90237 8.68342 6.29289 8.29289C6.68342 7.90237 7.31658 7.90237 7.70711 8.29289L12 12.5858L16.2929 8.29289C16.6834 7.90237 17.3166 7.90237 17.7071 8.29289C18.0976 8.68342 18.0976 9.31658 17.7071 9.70711L12.7071 14.7071Z" fill="#000000"/>
+                    </svg>
+                </div>
                 <h2 class="collections-title">Following List</h2>
                 <div class="collections">
                     <div class="line"></div>
@@ -133,6 +143,11 @@
                 </div>
             </div>
             <div class="card collections-card">
+                <div class="minimize-button rotated" onclick="toggleRotationBadge(this)">
+                    <svg class="sg" width="100px" height="100px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7071 14.7071C12.3166 15.0976 11.6834 15.0976 11.2929 14.7071L6.29289 9.70711C5.90237 9.31658 5.90237 8.68342 6.29289 8.29289C6.68342 7.90237 7.31658 7.90237 7.70711 8.29289L12 12.5858L16.2929 8.29289C16.6834 7.90237 17.3166 7.90237 17.7071 8.29289C18.0976 8.68342 18.0976 9.31658 17.7071 9.70711L12.7071 14.7071Z" fill="#000000"/>
+                    </svg>
+                </div>
                 <h2 class="collections-title">Badges</h2>
                 <div class="collections">
                     <div class="line"></div>
@@ -146,30 +161,6 @@
                     </div>
 
                 </div>
-            </div>
-        </div>
-
-        <div class="f-wrapper f-wrapper--1">
-            <div class="f">
-                <div class="flower__leaf flower__leaf--1"></div>
-                <div class="flower__leaf flower__leaf--2"></div>
-                <div class="flower__leaf flower__leaf--3"></div>
-                <div class="flower__leaf flower__leaf--4"></div>
-                <div class="flower__leaf flower__leaf--5"></div>
-                <div class="flower__leaf flower__leaf--6"></div>
-                <div class="flower__leaf flower__leaf--7"></div>
-            </div>
-        </div>
-
-        <div class="f-wrapper f-wrapper--2">
-            <div class="f">
-                <div class="flower__leaf flower__leaf--1"></div>
-                <div class="flower__leaf flower__leaf--2"></div>
-                <div class="flower__leaf flower__leaf--3"></div>
-                <div class="flower__leaf flower__leaf--4"></div>
-                <div class="flower__leaf flower__leaf--5"></div>
-                <div class="flower__leaf flower__leaf--6"></div>
-                <div class="flower__leaf flower__leaf--7"></div>
             </div>
         </div>
 
@@ -189,6 +180,30 @@
     </main>
 
   <footer>
+
+    <div class="f-wrapper f-wrapper--1">
+        <div class="f">
+            <div class="flower__leaf flower__leaf--1"></div>
+            <div class="flower__leaf flower__leaf--2"></div>
+            <div class="flower__leaf flower__leaf--3"></div>
+            <div class="flower__leaf flower__leaf--4"></div>
+            <div class="flower__leaf flower__leaf--5"></div>
+            <div class="flower__leaf flower__leaf--6"></div>
+            <div class="flower__leaf flower__leaf--7"></div>
+        </div>
+    </div>
+
+    <div class="f-wrapper f-wrapper--2">
+        <div class="f">
+            <div class="flower__leaf flower__leaf--1"></div>
+            <div class="flower__leaf flower__leaf--2"></div>
+            <div class="flower__leaf flower__leaf--3"></div>
+            <div class="flower__leaf flower__leaf--4"></div>
+            <div class="flower__leaf flower__leaf--5"></div>
+            <div class="flower__leaf flower__leaf--6"></div>
+            <div class="flower__leaf flower__leaf--7"></div>
+        </div>
+    </div>
     <img id = "github" class="socialMediaIcon" src="../images/social_media/github.png" alt="Logo Small">
     <p class="gradient_Text">© 2024 HeMa. All rights reserved.</p>
     <img id = "uaic" class="socialMediaIcon" src="../images/social_media/uaic_logo_small.png" alt="Logo Small">
