Added plant filtering in every collection

--- a/html/PlantProfilePage.html
+++ b/html/PlantProfilePage.html
@@ -57,7 +57,7 @@
                 <input type="text" name="genus" id="genus1" placeholder="Genus">
                 <input type="text" name="species" id="species1" placeholder="Species">
                 <input type="text" name="place" id="place1" placeholder="Place">
-                <input type="text" name="color" id="color-plant1" placeholder="Color">
+                <input type="color" name="color" id="color-plant1" placeholder="Color">
             
                 <button type="submit" id="updateDataButton">Save</button>
             </form>
@@ -129,7 +129,7 @@
                     </div>
                     <div class="form-group w-100">
                         <label class="label">Color</label>
-                        <p id="color-plant" class="form-control"></p>
+                        <div id="color-plant" class="form-control"></div>
                     </div>
                 </div>
             </div>
