Added collection filtering/rss generator based on popularity/ CHANGED TABLE PLANTS FROM DATABASE

--- a/html/index.html
+++ b/html/index.html
@@ -74,7 +74,7 @@
                 <img src='../images/background/card4.jpg' alt='Plant of the Week'>
                 <div class="cta__text-column">
                     <p class ="desc">Who is there? A new weekly champion? Enter to see who is the best plant out there, the most loved and collected one.</p>
-                    <a href="PlantProfilePage.html">See Plant of the Week</a>
+                    <a id="plantOfTheWeek" href="PlantProfilePage.html">See Plant of the Week</a>
                 </div>
             </article>
 
