--- a/html/landingPage.html
+++ b/html/landingPage.html
@@ -28,7 +28,7 @@
                 🡨
               </button>
               <ul class="image-list">
-                <li><img class="image-item" src="../images/background/picture1.png" alt="img-1"></li>
+                <!-- <li><img class="image-item" src="../images/background/picture1.png" alt="img-1"></li>
                 <li><img class="image-item" src="../images/background/picture10.png" alt="img-2"></li>
                 <li><img class="image-item" src="../images/background/picture9.png" alt="img-3"></li>
                 <li><img class="image-item" src="../images/background/picture2.png" alt="img-4"></li>
@@ -37,7 +37,7 @@
                 <li><img class="image-item" src="../images/background/picture7.png" alt="img-7"></li>
                 <li><img class="image-item" src="../images/background/picture3.png" alt="img-8"></li>
                 <li><img class="image-item" src="../images/background/picture6.png" alt="img-9"></li>
-                <li><img class="image-item" src="../images/background/picture4.png" alt="img-10"></li>
+                <li><img class="image-item" src="../images/background/picture4.png" alt="img-10"></li> -->
               </ul>
               <button id="next-slide" class="slide-button material-symbols-rounded">
                 🡪
@@ -116,8 +116,10 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="../scripts/landingPageAPI.js"></script>
     <script src="../scripts/footer.js"></script>
     <script src="../scripts/landingPage.js"></script>
     <script src="../scripts/randomColors.js"></script>
 </body>
 </html>
+
