Added registering, you can add images, collection generation and filtering

--- a/html/PlantProfilePage.html
+++ b/html/PlantProfilePage.html
@@ -80,7 +80,7 @@
                         <div id="overlay">
                             <div id="popup-message">You need to choose an image</div>
                           </div>
-                        <img id="plantAvatar" src="../Images/website_Icon/LittleCactus.jpg" alt="Plant Image" width="235" style="border-radius: var(--border-radius);" onclick="handleImageUpload()">
+                        <img id="plantAvatar" src="" alt="Plant Image" width="235" style="border-radius: var(--border-radius);" onclick="handleImageUpload()">
                         <input type="file" id="fileInput" style="display: none;" onchange="displayImage(this)">
                     </div>
     
