--- a/html/profile.html
+++ b/html/profile.html
@@ -77,7 +77,7 @@
                                 <div id="overlay">
                                     <div id="popup-message">You need to choose an image</div>
                                   </div>
-                                <img id="avatar" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" width="150" onclick="handleImageUpload()">
+                                <img id="avatar" src="" alt="Admin" width="150" onclick="handleImageUpload()">
                                 <input type="file" id="fileInput" style="display: none;" onchange="displayImage(this)">
                             </div>
                             <div id="circleData">
