Added favorite collection, report button, external api, others

--- a/html/admin.html
+++ b/html/admin.html
@@ -29,6 +29,11 @@
                     <p>Delete clients or modify their albums</p>
                 </section>
 
+                <section id="reportList">
+                    <h2>Report Manager</h2>
+                    <p>Manage reported users accordingly</p>
+                </section>
+
                 <section id="generateReports">
                     <h2>Generate Reports</h2>
                     <p>Generate reports of clients and plants</p>
