--- a/html/collection.html
+++ b/html/collection.html
@@ -62,6 +62,7 @@
       </div>
 
         <button id="addPlantButton" class="floating-button" title="Add New Button">&#43;</button>
+        <button id="importPlantButton" class="floating-button" title="Add New Button">📥</button>
         <div id="whiteback">
         <div id="cont">
             <div id="title">
