--- a/html/index.html
+++ b/html/index.html
@@ -46,45 +46,53 @@
 
             <div class="about-main facts-section">
             
-            <article class="cta fact-item">
-                <img src='../images/background/white1.jpg' alt='Profile'>
-                <div class="cta__text-column">
-                    <p class ="desc">Add, Edit and Customize your Profile with colorful pallets, collections and let everyone know who is the best plant collector out there!</p>
-                    <a id="viewProfile" href="profile.html">View Your Profile</a>
-                </div>
-            </article>
+                <article class="cta fact-item">
+                    <img src='../images/background/white1.jpg' alt='Profile'>
+                    <div class="cta__text-column">
+                        <p class ="desc">Add, Edit and Customize your Profile with colorful pallets, collections and let everyone know who is the best plant collector out there!</p>
+                        <a id="viewProfile" href="profile.html">View Your Profile</a>
+                    </div>
+                </article>
 
-            <article class="cta fact-item">
-                <img src='../images/background/plantCollection.jpg' alt='Login'>
-                <div class="cta__text-column">
-                    <p class ="desc">See plant collections shared by loving and ambitious users just like you, enjoy multiatributes search, different view styles and sorting methods.</p>
-                    <a href="feed.html">View Shared Collections</a>
-                </div>
-            </article>
+                <article class="cta fact-item">
+                    <img src='../images/background/plantCollection.jpg' alt='Login'>
+                    <div class="cta__text-column">
+                        <p class ="desc">See plant collections shared by loving and ambitious users just like you, enjoy multiatributes search, different view styles and sorting methods.</p>
+                        <a href="feed.html">View Shared Collections</a>
+                    </div>
+                </article>
 
-            <article class="cta fact-item">
-                <img src='../images/background/tipsAndTricks.jpg' alt='Login'>
-                <div class="cta__text-column">
-                    <p class ="desc">Find new and interesting tricks about how nature works, laid here for you, here you can find blogs such us how to press plants, tips and tricks about urban gardening and more!</p>
-                    <a href="blog.html">Search the Blogs</a>
-                </div>
-            </article>
+                <article class="cta fact-item">
+                    <img src='../images/background/tipsAndTricks.jpg' alt='Login'>
+                    <div class="cta__text-column">
+                        <p class ="desc">Find new and interesting tricks about how nature works, laid here for you, here you can find blogs such us how to press plants, tips and tricks about urban gardening and more!</p>
+                        <a href="blog.html">Search the Blogs</a>
+                    </div>
+                </article>
 
-            <article class="cta fact-item">
-                <img src='../images/background/card4.jpg' alt='Plant of the Week'>
-                <div class="cta__text-column">
-                    <p class ="desc">Who is there? A new weekly champion? Enter to see who is the best plant out there, the most loved and collected one.</p>
-                    <a id="plantOfTheWeek" href="PlantProfilePage.html">See Plant of the Week</a>
-                </div>
-            </article>
+                <article class="cta fact-item">
+                    <img src='../images/background/card4.jpg' alt='Plant of the Week'>
+                    <div class="cta__text-column">
+                        <p class ="desc">Who is there? A new weekly champion? Enter to see who is the best plant out there, the most loved and collected one.</p>
+                        <a id="plantOfTheWeek" href="PlantProfilePage.html">See Plant of the Week</a>
+                    </div>
+                </article>
 
-            <article class="cta fact-item">
-                <img src='../images/background/contact.png' alt='Plant of the Week'>
-                <div class="cta__text-column">
-                    <p class ="desc">Want to colaborate with us? Just have a question? or you want to improve our loving platform? Then dont hesitate to contact us!</p>
-                    <a href="contact.html">Contact Us</a>
-                </div>
-            </article>
+                <article class="cta fact-item">
+                    <img src='../images/background/contact.png' alt='Plant of the Week'>
+                    <div class="cta__text-column">
+                        <p class ="desc">Want to colaborate with us? Just have a question? or you want to improve our loving platform? Then dont hesitate to contact us!</p>
+                        <a href="contact.html">Contact Us</a>
+                    </div>
+                </article>
+
+                <article class="cta fact-item">
+                    <img src='../images/background/network.jpg' alt='Plant of the Week'>
+                    <div class="cta__text-column">
+                        <p class ="desc">Discover a diverse collection of APIs designed for developers passionate about nature. Dive into our developer-friendly documentation and start building apps that make a difference today.</p>
+                        <a href="api.html">Join Our Community</a>
+                    </div>
+                </article>
 
         </div>
 
