--- a/html/PlantProfilePage.html
+++ b/html/PlantProfilePage.html
@@ -65,6 +65,8 @@
             </div>
           </div>
 
+          <button id="addPlantButton" class="floating-button" title="Add New Button"></button>
+
          <div id="whiteback"> 
             <div id="plantTitle">
                 <p>Plant Details</p>
