--- a/html/blogPage.html
+++ b/html/blogPage.html
@@ -46,7 +46,9 @@
             <span class="close">&times;</span>
             <h2>Report Comment</h2>
             <p id="reportName">Name: </p>
+            <div class="spaceLine"></div>
             <p id="reportComment">Comment: </p>
+            <div class="spaceLine"></div>
             <p>Please select a reason for reporting this comment:</p>
             <form id="reportForm">
               <label>
@@ -65,6 +67,7 @@
                     <input type="radio" name="motif" value="Other" required>
                     <span>Other</span>
                 </label>
+                <div class="spaceLine"></div>
             
                 <button type="submit" id="bt">Submit</button>
             </form>
