Added json exporting

--- a/html/generateReports.html
+++ b/html/generateReports.html
@@ -29,22 +29,24 @@
                 <div id="clientsReportDiv">
                     <section id="clientsSection">
                         <h2>Clients Report</h2>
-                        <p>Filling Text client...blah blah</p>
+                        <p>Export Information only for Admin</p>
                     </section>
                     <div class="buttons">
                         <div class="button">CSV</div>
                         <div class="button">PDF</div>
+                        <div class="button">JSON</div>
                     </div>
                </div>
 
                 <div id="plantsReportDiv">
                     <section id="plantsSection">
                         <h2>Plant Report</h2>
-                        <p>Filling Text client...blah blah</p>
+                        <p>Export Information only for Admin</p>
                     </section>
                     <div class="buttons">
                         <div class="button">CSV</div>
                         <div class="button">PDF</div>
+                        <div class="button">JSON</div>
                     </div>
                 </div>
         
