--- a/html/feed.html
+++ b/html/feed.html
@@ -41,7 +41,7 @@
 
       <div id="adminPanel" >
 
-        <p id="controlPanel">Posts Feed</p>
+        <p id="controlPanel">Collections Feed</p>
 
         <div id="panelLine"></div>
 
