--- a/html/Documentatie.html
+++ b/html/Documentatie.html
@@ -100,11 +100,93 @@
 <h3>Software Interfaces</h3>
 <p>Database: Utilizing a robust MySQL database, HeMa efficiently handles a vast array of data from user transactions to detailed plant information. Encased in a Docker container, the database guarantees both security and portability.</p>
 <p>Server: The server stands as the backbone of HeMa, ensuring all user requests are handled with speed and reliability, fostering a seamless user experience.</p>
+<img src="./images/documentatie/images/baza.png" alt="Collection Page">
+
+<h3>C4 Model Of The App</h3>
+<p>The C4 model is a framework for visualizing the architecture of software systems. It consists of different diagrams that illustrate the system's context, containers, and components, providing a comprehensive view of the application's structure and interactions.</p>
+
+<img src="../C4/Context.png" alt="Context Diagram">
+<p>The Context Diagram provides a high-level overview of the HeMa system, showing its interactions with external entities such as users and external systems. It depicts the system in its environment, identifying primary user roles and external systems that interface with HeMa.</p>
+
+<img src="../C4/Container.png" alt="Container Diagram">
+<p>The Container Diagram zooms in to show the high-level technical architecture of the HeMa system. It illustrates the various containers such as the web application, the database, and other supporting services. This diagram highlights how these containers interact and the technologies used for implementation.</p>
+
+<img src="../C4/Components.png" alt="Component Diagram">
+<p>The Component Diagram breaks down the containers into finer-grained components. It details the internal structure of the web application, showcasing individual components like the user interface, authentication module, plant collection manager, blog manager, and others. This diagram helps in understanding how the system's functionality is partitioned and organized within containers.</p>
+
+<img src="./images/documentatie/images/ServerArchitecture.png" alt="Server Architecture Diagram">
+<p>The diagram above illustrates the high-level architecture of the HeMa server, showing how different components interact with each other.</p>
+
+<h3>Server Architecture</h3>
+<p>The HeMa platform is built on a robust and scalable server architecture designed to handle a large number of user interactions and data transactions efficiently. The server-side application is developed using modern web technologies and frameworks to ensure high performance, security, and maintainability.</p>
+
+<h4>Architecture Overview</h4>
+<p>The server architecture consists of several key components, including the web server, application server, and database server. These components work together to provide a seamless user experience and efficient data management.</p>
+
+<h3>Routes and Paths</h3>
+<p>The HeMa application uses a RESTful API to manage communication between the client and server. Below are the detailed routes and paths used in the application, including their specific functionalities and usage:</p>
+
+<h4>User Management</h4>
+<ul>
+  <li><code>GET /api/user</code> - Retrieves the full profile details of the authenticated user. This includes username, account settings, and links to user-generated content. Requires active session authentication.</li>
+  <li><code>GET /api/id</code> - Provides the unique identifier for the authenticated user, crucial for integration with other internal systems or when linking user data across different platforms.</li>
+  <li><code>POST /api/register</code> - Allows new users to create an account by submitting their email, chosen username, and password. This endpoint also handles initial data validation and sends a confirmation email.</li>
+  <li><code>POST /api/login</code> - Authenticates a user based on the provided email or username and password. Returns a session token that must be included in subsequent API requests that require authentication.</li>
+</ul>
+
+<h4>Plant Collection Management</h4>
+<ul>
+  <li><code>GET /api/collections</code> - Retrieves all plant collections associated with the authenticated user. This includes collection names, plant species, care instructions, and metadata such as creation dates and modification history.</li>
+  <li><code>GET /api/allSharedCollections</code> - Fetches all plant collections that have been shared publicly by users across the platform. Useful for discovering new plants and inspiring community engagement.</li>
+</ul>
+
+<h4>Blog Management</h4>
+<ul>
+  <li><code>GET /api/blogs</code> - Retrieves all blog posts from the platform, including posts by the user and others. Supports pagination and filtering by tags or dates.</li>
+  <li><code>POST /api/blogs</code> - Allows users to create a new blog post. Users must provide the blog title, content, and optionally, images and links. Supports markdown and HTML content.</li>
+</ul>
+
+<h4>Community Interaction</h4>
+<ul>
+  <li><code>GET /api/feed</code> - Provides a personalized feed of plant collections and blog posts curated based on the user's interests and previous interactions. Includes likes, comments, and shared posts.</li>
+  <li><code>POST /api/feed/search</code> - Enables searching within the feed for specific collections or blog posts based on criteria such as plant types, popularity, and user ratings.</li>
+</ul>
+
+<h4>Utility Services</h4>
+<ul>
+  <li><code>GET /rss</code> - Offers an RSS feed for users who prefer to receive updates via RSS readers. Includes updates on new blog posts and community news.</li>
+</ul>
+
+
+<h3>Dependencies</h3>
+<p>The HeMa platform leverages a range of dependencies to facilitate various functionalities, from encryption to email communication and PDF generation. Below is a list of the key dependencies used in the project:</p>
+<ul>
+  <li><code>bcrypt</code> (v5.1.1): Used for hashing and encrypting user passwords to ensure secure authentication.</li>
+  <li><code>crypto</code> (v1.0.1): Provides cryptographic functionality for various security operations.</li>
+  <li><code>csv-parser</code> (v3.0.0): A module for parsing CSV files, useful for importing and processing data.</li>
+  <li><code>csv-writer</code> (v1.6.0): Used for writing data to CSV files, supporting export functionalities.</li>
+  <li><code>dotenv</code> (v16.4.5): Loads environment variables from a .env file, simplifying configuration management.</li>
+  <li><code>formidable</code> (v3.5.1): Handles file uploads and form data parsing, essential for managing user inputs.</li>
+  <li><code>mysql2</code> (v3.10.1): A MySQL client for Node.js, enabling database interactions and queries.</li>
+  <li><code>node-cron</code> (v3.0.3): A library for scheduling tasks, used for periodic data updates and maintenance.</li>
+  <li><code>nodemailer</code> (v6.9.13): Facilitates email sending, crucial for user notifications and password resets.</li>
+  <li><code>pdfkit</code> (v0.15.0): A tool for generating PDF documents, used for creating reports and exporting data.</li>
+  <li><code>swagger-ui-dist</code> (v5.17.14): Provides a visual interface for the API documentation using Swagger UI.</li>
+  <li><code>yamljs</code> (v0.3.0): Parses YAML files, useful for configuration and data management.</li>
+</ul>
+
+<h3>External Dependencies</h3>
+<p>The HeMa platform also relies on external APIs to enhance its functionalities and provide a richer user experience. The following are the key external dependencies used in the project:</p>
+<ul>
+  <li><strong>Perenual API:</strong> The <a href="https://perenual.com" target="_blank">Perenual API</a> is used to bring random images for the landing page, making it visually appealing and dynamic. By fetching a variety of plant images, the landing page maintains a fresh and engaging appearance.</li>
+  <li><strong>Plant.id API:</strong> The <a href="https://plant.id/api/v3/kb/plants" target="_blank">Plant.id API</a> is utilized for precompleted values when adding plants and for image covering. This API provides detailed information about different plants, ensuring accurate and comprehensive plant data within the platform.</li>
+</ul>
 
 <h3>Communication Interfaces</h3>
 <p>Account Interface: With endpoints like register, login, logout, reset-password, and verify-email, HeMa ensures secure and efficient management of user accounts, aiding users in the safe handling of their credentials.</p>
 
 <h2>System Features</h2>
+
 <h3>Login/Logout</h3>
 <p>The site requires users to log in to access the full range of functionalities. To log in, users must enter their email address or username and the corresponding password for their account.</p>
 
@@ -115,19 +197,34 @@
 <p>For security, the database does not store user passwords. If a user forgets their password and cannot access their account, they should enter their email address on the password reset page. They will receive an email with a link to set a new password.</p>
 
 <h3>Plant Collection Management</h3>
-<p>Registered users have the ability to add or remove plants from their personal collection. This feature allows users to customize and organize their plant collections according to their preferences, whether they wish to maintain a registry of the plants they have or plan future acquisitions.</p>
+<p>Users can manage their plant collections by adding new plants, updating existing plant details, or removing plants from their collection. Each plant entry allows for detailed descriptions, care instructions, and personalized tags.</p>
 
 <h3>Managing Multiple Collections</h3>
-<p>Each user can create and manage multiple plant collections. These collections can be thematic, such as "Spring Flowers" or "Succulents", allowing users to categorize and display their plants in an organized manner. Users can add new collections or remove existing ones as they see fit.</p>
+<p>This feature allows users to create and manage multiple plant collections. Each collection can be named and described individually, helping users organize plants based on different themes or care requirements.</p>
 
 <h3>Creating and Reading Blogs</h3>
-<p>The HeMa platform offers each user the opportunity to create their own blogs, allowing them to share experiences, tips, or stories related to plants. Users can also read and interact with blogs posted by other community members, fostering the exchange of knowledge and experiences among plant enthusiasts.</p>
+<p>Users can create personal blogs to share their gardening experiences or tips. The blog section supports text, images, and links, allowing for rich, engaging content. Readers can browse through various blog entries, comment on them, and share them on social media.</p>
 
 <h3>Feed</h3>
-<p>HeMa allows users of the platform to interacted with other users collections that they shared on the website, this can be done using the form page where they can search using multiatributes specific collections and they can see it in 2 different modes, a text based one and a more visually appearing one</p>
+<p>The Feed feature provides users with updates from other plant enthusiasts. It includes new blog posts, popular plant collections, and trending topics within the community. Users can customize their feed based on their interests.</p>
 
-<h3>Interaction with the Community</h3>
-<p>HeMa encourages interaction among users through integrated social features such as the ability to follow interesting collections of other users or to receive notifications when a collection is updated. Thus, the platform becomes not just a space for managing plants, but also a vibrant community for botanical enthusiasts.</p>
+<h3>Admin Dashboard</h3>
+<p>The Admin Dashboard offers tools for site administrators to manage user accounts, moderate content, and view detailed reports. Features include user management, content approval, and analytics. Specific tools like 'List of Clients', 'Report Manager', and 'Generate Reports' allow for comprehensive site management.</p>
+
+<h3>User Profiles</h3>
+<p>Each user has a profile where they can display their plant collections, blog posts, and personal details. Profiles can be customized with images, biographical information, and links to social media.</p>
+
+<h3>API Integration</h3>
+<p>Developers can access the platform's functionalities through a comprehensive API. The API supports common methods such as GET, POST, PUT, DELETE, and UPDATE, enabling integration with external systems and applications.</p>
+
+<h3>Community Interaction</h3>
+<p>Users can interact with each other by sharing collections, commenting on blogs, and participating in community challenges and events. This feature fosters a vibrant and supportive online community of plant enthusiasts.</p>
+
+<h3>Enhanced Search Capabilities</h3>
+<p>Users can perform detailed searches within the platform, using filters like plant name, collection type, and date added. This allows users to easily find specific plants or collections shared by others.</p>
+
+<h3>Report and Analytics</h3>
+<p>Administrators have access to detailed reports and analytics, helping them understand user behavior and site usage. This includes data on user engagement, popular plants, and blog interactions.</p>
 
 <h2>Additional System Requirements</h2>
 <h3>Operating Environment</h3>
